[gd_scene load_steps=5 format=3 uid="uid://dnsmnlrjt2d3e"]

[ext_resource type="Script" path="res://scripts/enemies/technical/red_bullet.gd" id="1_0t1js"]
[ext_resource type="Texture2D" uid="uid://col62vwitt0wa" path="res://resourses/sprites/enemies/technical/red_bullet.png" id="1_k38lc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_17gtn"]
radius = 7.07107

[sub_resource type="CircleShape2D" id="CircleShape2D_a74hi"]
radius = 7.0

[node name="RedBullet" type="CharacterBody2D"]
z_index = 1
collision_layer = 0
collision_mask = 0
script = ExtResource("1_0t1js")
SPEED = 80.0

[node name="RotationalPart" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="RotationalPart"]
texture = ExtResource("1_k38lc")

[node name="AttackArea" type="Area2D" parent="RotationalPart"]
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="RotationalPart/AttackArea"]
shape = SubResource("CircleShape2D_17gtn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_a74hi")

[node name="LiveTimer" type="Timer" parent="."]

[connection signal="timeout" from="LiveTimer" to="." method="_on_live_timer_timeout"]
